--- a/web/sites/entrypage/config/sync/core.entity_form_display.paragraph.sponsor_cmi.default.yml
+++ b/web/sites/entrypage/config/sync/core.entity_form_display.paragraph.sponsor_cmi.default.yml
@@ -6,6 +6,9 @@ dependencies:
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_link
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_link_target
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_logo
+    - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_logo_revamp
+    - field.field.paragraph.sponsor_cmi.field_sponsor_subtitle
+    - field.field.paragraph.sponsor_cmi.field_sponsor_title
     - image.style.thumbnail
     - paragraphs.paragraphs_type.sponsor_cmi
   module:
@@ -18,7 +21,7 @@ bundle: sponsor_cmi
 mode: default
 content:
   field_sponsor_cmi_link:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -26,12 +29,20 @@ content:
     type: string_textfield
     region: content
   field_sponsor_cmi_link_target:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_sponsor_cmi_logo:
+    weight: 1
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: image_image
+    region: content
+  field_sponsor_cmi_logo_revamp:
     weight: 0
     settings:
       progress_indicator: throbber
@@ -39,9 +50,27 @@ content:
     third_party_settings: {  }
     type: image_image
     region: content
-  translation:
-    weight: 10
+  field_sponsor_subtitle:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
+  field_sponsor_title:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  translation:
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
   status: true
