--- a/web/sites/entrypage/config/sync/core.entity_view_display.paragraph.sponsor_cmi.default.yml
+++ b/web/sites/entrypage/config/sync/core.entity_view_display.paragraph.sponsor_cmi.default.yml
@@ -6,6 +6,9 @@ dependencies:
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_link
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_link_target
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_logo
+    - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_logo_revamp
+    - field.field.paragraph.sponsor_cmi.field_sponsor_subtitle
+    - field.field.paragraph.sponsor_cmi.field_sponsor_title
     - paragraphs.paragraphs_type.sponsor_cmi
   module:
     - image
@@ -40,5 +43,30 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_sponsor_cmi_logo_revamp:
+    weight: 5
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
+  field_sponsor_subtitle:
+    weight: 4
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_sponsor_title:
+    weight: 3
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden: {  }
