WEBSITE-5805 footer redesign sponsor config and removed v3 toggle.

--- a/web/sites/registration/config/sync/field.field.paragraph.responsive_sponsor.field_mobile_sponsor_subtext.yml
+++ b/web/sites/registration/config/sync/field.field.paragraph.responsive_sponsor.field_mobile_sponsor_subtext.yml
@@ -9,7 +9,7 @@ id: paragraph.responsive_sponsor.field_mobile_sponsor_subtext
 field_name: field_mobile_sponsor_subtext
 entity_type: paragraph
 bundle: responsive_sponsor
-label: 'Mobile Sponsor Subtext'
+label: 'Sponsor Subtext'
 description: ''
 required: false
 translatable: true
