--- a/web/sites/registration/config/sync/field.field.paragraph.responsive_sponsor.field_mobile_sponsor_text.yml
+++ b/web/sites/registration/config/sync/field.field.paragraph.responsive_sponsor.field_mobile_sponsor_text.yml
@@ -9,7 +9,7 @@ id: paragraph.responsive_sponsor.field_mobile_sponsor_text
 field_name: field_mobile_sponsor_text
 entity_type: paragraph
 bundle: responsive_sponsor
-label: 'Mobile Sponsor Text'
+label: 'Sponsor Text'
 description: ''
 required: false
 translatable: true
