--- a/web/sites/registration/config/sync/field.field.paragraph.responsive_sponsor.field_res_sponsor_mobile_logo.yml
+++ b/web/sites/registration/config/sync/field.field.paragraph.responsive_sponsor.field_res_sponsor_mobile_logo.yml
@@ -18,9 +18,9 @@ id: paragraph.responsive_sponsor.field_res_sponsor_mobile_logo
 field_name: field_res_sponsor_mobile_logo
 entity_type: paragraph
 bundle: responsive_sponsor
-label: 'Mobile Logo'
+label: Logo
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
