--- a/web/sites/registration/config/sync/core.entity_view_display.registration_theme_entity.registration_theme_entity.default.yml
+++ b/web/sites/registration/config/sync/core.entity_view_display.registration_theme_entity.registration_theme_entity.default.yml
@@ -12,10 +12,13 @@ dependencies:
     - field.field.registration_theme_entity.registration_theme_entity.field_content_two_columns
     - field.field.registration_theme_entity.registration_theme_entity.field_dafabet_logo
     - field.field.registration_theme_entity.registration_theme_entity.field_default_regvia
+    - field.field.registration_theme_entity.registration_theme_entity.field_enable_geocomply
     - field.field.registration_theme_entity.registration_theme_entity.field_enable_two_columns
     - field.field.registration_theme_entity.registration_theme_entity.field_error_color
+    - field.field.registration_theme_entity.registration_theme_entity.field_favicon
     - field.field.registration_theme_entity.registration_theme_entity.field_form_font_color
     - field.field.registration_theme_entity.registration_theme_entity.field_form_title_color
+    - field.field.registration_theme_entity.registration_theme_entity.field_geocomply_domain_list
     - field.field.registration_theme_entity.registration_theme_entity.field_link_color
     - field.field.registration_theme_entity.registration_theme_entity.field_login_destination_url
     - field.field.registration_theme_entity.registration_theme_entity.field_registration_button_font_c
@@ -36,10 +39,11 @@ dependencies:
     - field.field.registration_theme_entity.registration_theme_entity.field_tripwire_toggle
   module:
     - color_field
-    - image
+    - file
     - link
     - options
     - registration_theme
+    - svg_image
     - text
 id: registration_theme_entity.registration_theme_entity.default
 targetEntityType: registration_theme_entity
@@ -122,6 +126,16 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_enable_geocomply:
+    weight: 33
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_enable_two_columns:
     weight: 24
     label: above
@@ -141,6 +155,14 @@ content:
     third_party_settings: {  }
     type: color_field_formatter_text
     region: content
+  field_favicon:
+    weight: 32
+    label: above
+    settings:
+      use_description_as_link_text: true
+    third_party_settings: {  }
+    type: file_default
+    region: content
   field_form_font_color:
     weight: 5
     label: above
@@ -158,6 +180,13 @@ content:
       opacity: '1'
     third_party_settings: {  }
     type: color_field_formatter_text
+    region: content
+  field_geocomply_domain_list:
+    weight: 34
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
     region: content
   field_link_color:
     weight: 14
