--- a/web/sites/registration/config/sync/field.storage.registration_theme_entity.field_enable_geocomply.yml
+++ b/web/sites/registration/config/sync/field.storage.registration_theme_entity.field_enable_geocomply.yml
@@ -13,6 +13,6 @@ module: core
 locked: false
 cardinality: 1
 translatable: true
-indexes: {  }field.storage.registration_theme_entity.field_enable_geocomply.yml
+indexes: {  }
 persist_with_no_fields: false
 custom_storage: false
