--- a/web/sites/mobile-entrypage/config/sync/core.entity_view_display.taxonomy_term.promotions_product_filter.default.yml
+++ b/web/sites/mobile-entrypage/config/sync/core.entity_view_display.taxonomy_term.promotions_product_filter.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.taxonomy_term.promotions_product_filter.field_filter_name
     - field.field.taxonomy_term.promotions_product_filter.field_product_category_id
     - field.field.taxonomy_term.promotions_product_filter.field_product_filter_id
+    - field.field.taxonomy_term.promotions_product_filter.field_show_in_flutter_app
     - taxonomy.vocabulary.promotions_product_filter
   module:
     - text
@@ -55,6 +56,16 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_show_in_flutter_app:
+    weight: 5
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
 hidden:
   langcode: true
