ATLANTIC-1077 Added instagram, linkedin, tiktok and telegram social media

--- a/web/sites/nextbet/config/sync/field.storage.paragraph.field_link_class.yml
+++ b/web/sites/nextbet/config/sync/field.storage.paragraph.field_link_class.yml
@@ -91,6 +91,19 @@ settings:
     -
       value: nextbet
       label: 'Nextbet'
+    -
+      value: linkedin
+      label: 'LinkedIn'
+    -
+      value: instagram
+      label: 'Instagram'
+    -
+      value: tiktok
+      label: 'TikTok'
+    -
+      value: telegram
+      label: 'Telegram'
+
   allowed_values_function: ''
 module: options
 locked: false
