PACIFIC-1295-password-new-requirements-sync

--- a/web/sites/mobile-msw/config/sync/webcomposer_form_manager.form.change_password_form.new_password.yml
+++ b/web/sites/mobile-msw/config/sync/webcomposer_form_manager.form.change_password_form.new_password.yml
@@ -11,7 +11,7 @@ field_validations:
     parameters:
       spaces: 1
   alphanumeric:
-    enable: 1
+    enable: 0
     error_message: 'Password must contain 6-10 alphanumeric characters only with no special characters and spaces.'
     parameters:
       spaces: 0
@@ -38,19 +38,23 @@ field_validations:
     error_message: 'Field does not contain a valid email address'
   min_length:
     enable: 1
-    error_message: 'Please enter at least 6 characters.'
+    error_message: 'Please enter at least 8 characters.'
+    rule_description: ''
+    weight: '0'
     parameters:
-      length: '6'
+      length: '8'
   max_length:
     enable: 1
     error_message: 'Please enter no more than 10 characters.'
     parameters:
       length: '10'
   regex:
-    enable: 0
-    error_message: 'This field only accepts specific characters.'
+    enable: 1
+    error_message: 'This field requires at least one uppercase letter, one lowercase letter, one digit, and one special character.'
+    rule_description: ''
+    weight: '0'
     parameters:
-      regex_value: ''
+      regex_value: '^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[\\W_]).+$'
   valid_date:
     enable: 0
     error_message: 'Date is invalid'
