--- a/web/sites/entrypage/config/sync/core.entity_view_display.paragraph.sponsor_cmi.default.yml
+++ b/web/sites/entrypage/config/sync/core.entity_view_display.paragraph.sponsor_cmi.default.yml
@@ -3,12 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.sponsor_cmi.field_enable_sponsor
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_link
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_link_target
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_logo
     - field.field.paragraph.sponsor_cmi.field_sponsor_cmi_logo_revamp
     - field.field.paragraph.sponsor_cmi.field_sponsor_subtitle
     - field.field.paragraph.sponsor_cmi.field_sponsor_title
+    - field.field.paragraph.sponsor_cmi.field_weight
     - paragraphs.paragraphs_type.sponsor_cmi
   module:
     - image
@@ -20,6 +22,16 @@ targetEntityType: paragraph
 bundle: sponsor_cmi
 mode: default
 content:
+  field_enable_sponsor:
+    weight: 6
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_sponsor_cmi_link:
     weight: 0
     label: above
@@ -68,5 +80,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_weight:
+    weight: 7
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
     region: content
 hidden: {  }
