--- a/web/sites/entrypage/config/sync/core.entity_form_display.node.promotion.default.yml
+++ b/web/sites/entrypage/config/sync/core.entity_form_display.node.promotion.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.promotion.field_chickpea_enabled_pre
     - field.field.node.promotion.field_chickpea_event_name
     - field.field.node.promotion.field_chickpea_script
+    - field.field.node.promotion.field_chickpea_video_thumbnail
     - field.field.node.promotion.field_enable_game_launch
     - field.field.node.promotion.field_hide_countdown
     - field.field.node.promotion.field_hide_promotion
@@ -251,6 +252,7 @@ third_party_settings:
         - field_chickpea_enabled_post
         - field_chickpea_script
         - field_chickpea_event_name
+        - field_chickpea_video_thumbnail
       parent_name: ''
       weight: 12
       format_type: tab
@@ -365,6 +367,14 @@ content:
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  field_chickpea_video_thumbnail:
+    weight: 148
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: { }
+    type: image_image
     region: content
   field_enable_game_launch:
     type: boolean_checkbox
