--- a/web/sites/entrypage/config/sync/core.entity_view_display.node.promotion.default.yml
+++ b/web/sites/entrypage/config/sync/core.entity_view_display.node.promotion.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.promotion.field_chickpea_enabled_pre
     - field.field.node.promotion.field_chickpea_event_name
     - field.field.node.promotion.field_chickpea_script
+    - field.field.node.promotion.field_chickpea_video_thumbnail
     - field.field.node.promotion.field_enable_game_launch
     - field.field.node.promotion.field_hide_countdown
     - field.field.node.promotion.field_hide_promotion
@@ -163,6 +164,19 @@ content:
       target: ''
     third_party_settings: {  }
     type: link
+    region: content
+  field_chickpea_video_thumbnail:
+    weight: 53
+    label: above
+    settings:
+      svg_attributes:
+        width: ''
+        height: ''
+      svg_render_as_image: true
+      image_style: ''
+      image_link: ''
+    third_party_settings: { }
+    type: image
     region: content
   field_full_tile_image:
     weight: 108
