--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_desktop_games_entity.zipang_desktop_games_entity.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_all_games_category
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_category
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_arcade_game_filter
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_bet_range
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_client_type
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_client_type_mobile
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_enable_free_play
@@ -27,6 +28,7 @@ dependencies:
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_title_icon
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_game_type
     - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_provider_product
+    - field.field.zipang_desktop_games_entity.zipang_desktop_games_entity.field_rtp
   module:
     - image
     - options
@@ -63,6 +65,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_bet_range:
+    weight: 29
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_client_type:
     weight: 10
@@ -228,6 +238,14 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_rtp:
+    weight: 28
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   name:
     label: above
