WEBSITE-5699-Adding-Russian-Kazakh-languages

--- a/web/sites/entrypage/config/sync/user.role.anonymous.yml
+++ b/web/sites/entrypage/config/sync/user.role.anonymous.yml
@@ -27,12 +27,14 @@ permissions:
   - 'access language id'
   - 'access language in'
   - 'access language ja'
+  - 'access language kk'
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
   - 'access language pk'
   - 'access language pl'
   - 'access language pt-br'
+  - 'access language ru'
   - 'access language te'
   - 'access language th'
   - 'access language vi'
