--- a/web/sites/msw/config/sync/msw_config.my_account_configuration.yml
+++ b/web/sites/msw/config/sync/msw_config.my_account_configuration.yml
@@ -35,3 +35,8 @@ customer_support_blurb:
   format: basic_html
 account_tab: Account
 history_tab: History
+enable_revise_password: 1
+revise_password_title: 'Security Update<br> Password Change Required'
+revise_password_content:
+  value: "<p>To enhance your account's security, please update your password.</p>\r\n\r\n<h1>New Password Requirements:</h1>\r\n\r\n<ul>\r\n\t<li>Minimum 8 characters; Maximum:10 characters</li>\r\n\t<li>Includes at least one uppercase and one lowercase letter</li>\r\n\t<li>Contains at least one number</li>\r\n\t<li>Includes at least one special character (e.g.,!,@,#,$)</li>\r\n</ul>\r\n\r\n<p class=\"btn-container\"><a class=\"btn btn-small\" href=\"https://example.com\">Update Now</a></p>\r\n"
+  format: basic_html
