--- a/web/sites/mobile-casino/config/sync/user.role.anonymous.yml
+++ b/web/sites/mobile-casino/config/sync/user.role.anonymous.yml
@@ -20,10 +20,12 @@ permissions:
   - 'access language id'
   - 'access language in'
   - 'access language ja'
+  - 'access language kk'
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
   - 'access language pt-br'
+  - 'access language ru'
   - 'access language te'
   - 'access language th'
   - 'access language vi'
