--- a/web/sites/msw/config/sync/msw_config.my_account_configuration.yml
+++ b/web/sites/msw/config/sync/msw_config.my_account_configuration.yml
@@ -38,5 +38,5 @@ history_tab: History
 enable_revise_password: 1
 revise_password_title: 'Security Update<br> Password Change Required'
 revise_password_content:
-  value: "<p>To enhance your account's security, please update your password.</p>\r\n\r\n<h1>New Password Requirements:</h1>\r\n\r\n<ul>\r\n\t<li>Minimum 8 characters; Maximum:10 characters</li>\r\n\t<li>Includes at least one uppercase and one lowercase letter</li>\r\n\t<li>Contains at least one number</li>\r\n\t<li>Includes at least one special character (e.g.,!,@,#,$)</li>\r\n</ul>\r\n\r\n<p class=\"btn-container\"><a class=\"btn btn-small\" href=\"https://example.com\">Update Now</a></p>\r\n"
+  value: "<p>To enhance your account's security, please update your password.\r\n</p>\r\n<h1>New Password Requirements:\r\n</h1>\r\n<ul>\r\n  <li>Minimum 8 characters; Maximum:10 characters</li>\r\n  <li>Includes at least one uppercase and one lowercase letter</li>\r\n  <li>Contains at least one number</li>\r\n  <li>Includes at least one special character (e.g.,!,@,#,$)</li>\r\n</ul>\r\n<p class=\"btn-container\"><a class=\"btn btn-small\" data-popup=\"true\" data-popup-width=\"820\" data-popup-height=\"700\" href=\"https://www.msw.ph/en/my-account#change-password-content\">Update Now</a>\r\n</p>\r\n"
   format: basic_html
