WEBSITE-5699-Adding-Language for dafa-sports and ow-sports

--- a/web/sites/dafa-sports/config/sync/user.role.anonymous.yml
+++ b/web/sites/dafa-sports/config/sync/user.role.anonymous.yml
@@ -23,9 +23,11 @@ permissions:
   - 'access language id'
   - 'access language in'
   - 'access language ja'
+  - 'access language kk'
   - 'access language ko'
   - 'access language pl'
   - 'access language pt-br'
+  - 'access language ru'
   - 'access language te'
   - 'access language th'
   - 'access language vi'
