WEBSITE-5952 [DF][CAS][DESK] Adding Kazakh / Russian languages

--- a/web/sites/casino/config/sync/user.role.anonymous.yml
+++ b/web/sites/casino/config/sync/user.role.anonymous.yml
@@ -31,6 +31,8 @@ permissions:
   - 'access language th'
   - 'access language vi'
   - 'access language zh-hans'
+  - 'access language ru'
+  - 'access language kk'
   - 'access site-wide contact form'
   - 'administer rest resources'
   - 'restful get affiliate_rest_resource'
